it/dev/graylog-stack/graylog/statefulset.yaml
---
# Source: graylog/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: graylog
  labels:
    helm.sh/chart: graylog-2.1.3
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "graylog"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "4.2.7"
spec:
  serviceName: graylog
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: graylog
      app.kubernetes.io/instance: "graylog"
      app.kubernetes.io/managed-by: "Helm"
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        helm.sh/chart: graylog-2.1.3
        app.kubernetes.io/name: graylog
        app.kubernetes.io/instance: "graylog"
        app.kubernetes.io/managed-by: "Helm"
        app.kubernetes.io/version: "4.2.7"
      annotations:
    spec:
      serviceAccountName: graylog

      securityContext:
        {}
      containers:
        - name: graylog-server
          image: "graylog/graylog:4.2.3-1"
          imagePullPolicy: "IfNotPresent"
          command:
            - /entrypoint.sh
          securityContext:
            privileged: false
          ports:
            - containerPort: 9000
              name: graylog
            - containerPort: 5514
              name: syslog
              protocol: UDP
            - containerPort: 6514
              name: network
              protocol: UDP
            - containerPort: 7514
              name: firewall
              protocol: UDP
            - containerPort: 12201
              name: kubernetes
              protocol: UDP
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: 500m
              memory: 1024Mi
          startupProbe:
            httpGet:
              path: /api/system/lbstatus
              port: 9000
            periodSeconds: 60
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /api/system/lbstatus
              port: 9000
            initialDelaySeconds: 0
            periodSeconds: 30
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/system/lbstatus
              port: 9000
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          volumeMounts:
            - name: journal
              mountPath: /usr/share/graylog/data/journal
            - name: config
              mountPath: /usr/share/graylog/config
            - name: entrypoint
              mountPath: /entrypoint.sh
              subPath: entrypoint.sh
            - name: kubectl
              mountPath: /k8s
            - mountPath: /usr/share/GeoIP
              name: geoipdir
      terminationGracePeriodSeconds: 120
      volumes:
        - name: config
          configMap:
            name: graylog
            items:
              - key: graylog.conf
                path: graylog.conf
                mode: 292 # 0444
              - key: log4j2.xml
                path: log4j2.xml
                mode: 292 # 0444
        - name: entrypoint
          configMap:
            name: graylog
            items:
              - key: entrypoint.sh
                path: entrypoint.sh
                mode: 365 # 0555
        - name: kubectl
          emptyDir: {}
        - name: geoipdir
          hostPath:
            path: /var/tmp/
            type: Directory
  volumeClaimTemplates:
    - metadata:
        name: journal
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "200Gi"
