it/dev/graylog-stack/graylog/headless-service.yaml
---
# Source: graylog/templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog
  namespace: graylog
  labels:
    helm.sh/chart: graylog-1.6.6
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "graylog"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "3.1"
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  ports:
  - name: graylog
    port: 9000
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "graylog"
