it/dev/graylog-stack/graylog/svc-udp.yaml
---
# Source: graylog/templates/udp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-udp
  labels:
    helm.sh/chart: graylog-2.1.3
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "graylog"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "4.2.7"
    app.kubernetes.io/component: "UDP"
spec:
  ports:
    - name: syslog
      port: 5514
      protocol: UDP
      targetPort: 5514
    - name: network
      port: 6514
      protocol: UDP
      targetPort: 6514
    - name: firewall
      port: 7514
      protocol: UDP
      targetPort: 7514
    - name: kubernetes
      port: 12201
      protocol: UDP
      targetPort: 12201  
  selector:
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "graylog"
  type: "LoadBalancer"
  externalTrafficPolicy: Cluster
