it/dev/graylog-stack/graylog/svc-web.yaml
---
# Source: graylog/templates/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog-web
  labels:
    helm.sh/chart: graylog-2.1.3
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "graylog"
    app.kubernetes.io/managed-by: "Helm"
    app.kubernetes.io/version: "4.2.7"
    app.kubernetes.io/component: "web"
spec:
  ports:
    - name: graylog
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: graylog
    app.kubernetes.io/instance: "graylog"
  type: "ClusterIP"
